# agent-plugins

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-npm.yml
.opencode/: package.json
.opencode/plugins/: agent-plugins.js
docs/: opencode.md
memory/: MEMORY.md  codex-rollout-format.md  gstack-entrepreneur-vendoring.md  usage.jsonl
plugins/alt-text/: README.md  package.json
plugins/command-chain-separator/: README.md  package.json
plugins/developing-solidworks/: README.md  package.json
plugins/gh-issue/: README.md  package.json
plugins/gstack-entrepreneur/: README.md  package.json
plugins/i-dont-believe-you/: README.md
plugins/mediocrity-detector/: README.md  package.json
plugins/memory-to-repo/: README.md  package.json
plugins/memory-to-repo/hooks/: hooks.json  (+4 more)
plugins/no-fetch/: README.md  package.json
plugins/onepassword/: README.md  package.json
plugins/playwright-cli-headed/: README.md  package.json
plugins/powershell-autofix/: README.md
plugins/pr-comments/: README.md  package.json
plugins/superpowers/: README.md  package.json
plugins/unrelated-issue-detector/: README.md  package.json
plugins/watch-pr/: README.md  package.json
plugins/windows-bash-guard/: README.md  package.json
plugins/worktree-reset/: README.md  package.json
scripts/: pack-skills.py
tests/: opencode.test.mjs  record-memory-usage.test.mjs  watch-pr.test.mjs
tools/: check-jq-programs.sh
(+127 files in other folders)
